--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -985,6 +985,9 @@ table.property .data-aggregate input {
 table.property .data-json td:nth-child(1) {
   width: 30%;
 }
+table.property .null {
+  color: #9d9d9d;
+}
 #value-json input {
   width: 80%;
 }
