Change auto-organize; see unsaved groups in "Export Nodes" menu * Make the auto-organize algorithm account for the width of each block in horizontal spacing calculations, with blocks on the same level of the tree being positioned such that their left sides align

--- a/src/app/node/modal-exportnodes.html
+++ b/src/app/node/modal-exportnodes.html
@@ -14,12 +14,14 @@
             <a href="#" ng-click="toggleExportDir(dir)" ng-class="getDisplayStyleDir(dir)">
               {{getDisplaySymbolDir(dir)}}
             </a>
+            <span class="save-marker" ng-hide="dirIsSaved(dir)">*</span>
             {{dir}}
             <ul>
               <li ng-repeat="(category, included) in categories" class="export-selector-entry">
                 <a href="#" ng-click="toggleExport(dir, category)" ng-class="getDisplayStyle(dir, category)">
                   {{getDisplaySymbol(dir, category)}}
                 </a>
+                <span class="save-marker" ng-hide="groupIsSaved(dir, category)">*</span>
                 {{category === "" ? "[other]" : category}}
               </li>
             </ul>
