--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -514,13 +514,13 @@ div.collapsible-list-items.hidden {
   padding: 1px;
 }
 .modal table td:nth-child(1) {
-  width: 32%;
+  width: auto;
 }
 .modal table td:nth-child(2) {
-  width: 32%;
+  width: auto;
 }
 .modal table td:nth-child(3) {
-  width: 32%;
+  width: auto;
 }
 .modal table td:nth-child(4) {
   vertical-align: middle;
@@ -988,7 +988,18 @@ table.property .data-json td:nth-child(1) {
 table.property .null {
   color: #9d9d9d;
 }
-#value-json input {
+table.property select#type {
+  width: 25%;
+  display: inline-block;
+}
+table.property #prop-name-editable {
+  display: inline-block;
+  width: 100%;
+}
+table.property #prop-name-editable input {
+  display: inline-block;
+}
+table.property #value-json input {
   width: 80%;
 }
 /* ================================*/
