b3-property compacting; prop panel output uses b3-property * Make b3-property elements more vertically compact if space is available * Make the property panel use the b3-property for outputs

--- a/src/app/property/property-panel.html
+++ b/src/app/property/property-panel.html
@@ -57,10 +57,13 @@
           <span class="left">Output</span>
         </label>
 
-        <table id="property-output-table">
-          <tbody>
-          </tbody>
-        </table>
+        <b3-property id="property-panel-output" ng-repeat="output in outputs"
+        name="output.name"
+        type="output.type"
+        key="output.key"
+        is-output="non-empty string"
+        b3-on-change="editProperties()"
+        b3-on-input="markForChange()"></b3-property>
       </div>
     </form>
   </div>
